<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    android:backgroundTint="#00BCD4"
    tools:context=".new_ad.NewAdFragment">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="65dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="30dp"
        android:background="#DEEFCB"
        app:columnCount="2"
        app:rowCount="3">

        <ImageButton
            android:id="@+id/vehicle_category_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/vehicle"
            android:onClick="onImageButtonClick"
            android:src="@android:drawable/ic_menu_preferences"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <ImageButton
            android:id="@+id/mobile_category_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mobile"
            android:onClick="onImageButtonClick"
            android:src="@android:drawable/stat_sys_phone_call"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <ImageButton
            android:id="@+id/furniture_category_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/furniture"
            android:onClick="onImageButtonClick"
            android:src="@android:drawable/ic_dialog_dialer"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <ImageButton
            android:id="@+id/property_category_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/property"
            android:onClick="onImageButtonClick"
            android:src="@drawable/ic_home"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <ImageButton
            android:id="@+id/electronics_category_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/electronics"
            android:onClick="onImageButtonClick"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <ImageButton
            android:id="@+id/other_category_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/other"
            android:onClick="onImageButtonClick"
            android:src="@android:drawable/btn_star_big_on"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="335dp"
        android:layout_height="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/chooseCategory"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

</FrameLayout>